--- a/python_wrapper/CMakeLists.txt
+++ b/python_wrapper/CMakeLists.txt
@@ -1,5 +1,8 @@
 # Here, we build the shared library that Python will call
 
+# Make the produced libraries go into /build instead of /build/Release
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
+
 # Find Boost and auto-generate the cmake files
 find_package(Boost MODULE REQUIRED)
 
@@ -20,7 +23,6 @@ target_include_directories(python_demo PRIVATE
 
 # Link to your library and Boost
 target_link_libraries(python_demo PRIVATE 
-    project_interface
     project_lib
     ${Python_LIBRARIES}
     Boost::Boost 
